# semio

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  .prettierrc.json  AGENTS.md  BUILD  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  buf_deps.bzl  build.ps1  constants.toml  dev.ps1  guids.yaml  nx.json  package-lock.json  package.json  powershell.ps1  project.toml  qualities_gllc_part1.txt  qualities_gllc_part2.txt  qualities_gllc_part3.txt  qualities_gllc_value_list.txt  semio-conda-env.yml  semio.toml  semio.ttl
py/engine/: README.md  build.ps1  dev.ps1  engine.py  generate-schemas.ps1  package.json  post-build.ps1  pyproject.toml  sqliteschema.ps1  test.ps1  test_engine.py
python/: createLocalKit.graphql  localKit.graphql  metabolism.db  metabolistic.json  metabolistickitinput.json  pyproject.toml  schema.graphql  schema.sql  semio.db  semio.py  test_semio.py
python/.devcontainer/: Dockerfile  devcontainer.json
python/engine/: .pre-commit-config.yaml  alembic.ini  build.ps1  debug.py  dev.ps1  engine.py  engine.toml  engine2.py  engine2.sqlite3  generate-schemas.ps1  kit.sqlite3  package.json  post-build.ps1  pyproject.toml  semio-engine.py  semio.py  sqliteschema.sh  sqlmodeltest.py  test-helper.gh  test_engine.py  test_semio-engine.py  test_semio.py  tests.sh
python/engine/Scripts/: c_rehash.pl
python/engine/db-dev/: env.py
python/engine/db-dev/versions/: 8c2629a56dcf_init_schema.py
python/engine/hooks/: hook-graphene_sqlalchemy.py
python/script/: pyproject.toml  semio.py  test_semio.py  tests.sh
python/script/.devcontainer/: devcontainer.json
python/semio/: adapter.py  artifact.py  cli.py  compiler.py  errors.py
python/server/: build.ps1  pyproject.toml  server.py  test_server.py
python/server/.devcontainer/: devcontainer.json
src/backend/assembler/: pyproject.toml
src/backend/assembler/semio/: core.py  parsers.py
src/backend/assembler/semio/backend/: behaviour.py  pyassembler.py
src/backend/assembler/semio/backend/assembler/: __init__.py  behaviour.py  pyassembler.py  semioassembler.py
src/backend/gateway/server/: BUILD.bazel  pyproject.toml  requirements.txt
src/backend/gateway/server/semio/backend/: pygateway.py
src/backend/manager/: dockerfile  pyproject.toml
src/backend/manager/semio/: core.py
src/backend/manager/semio/backend/: pymanager.py
src/backend/manager/semio/backend/manager/: __init__.py  behaviour.py  pymanager.py  semiomanager.py
src/bundle/: README.md  build.ps1  pyproject.toml  semio.py
src/bundle/pyinstaller/: sign.bat
src/bundle/pyinstaller/pyinstallerhooks/: hook-grpc.py
src/bundle/pyinstaller/semio/: constants.py
src/bundle/pyinstaller/semio/backend/assembler/: __init__.py
src/bundle/pyinstaller/semio/backend/gateway/: __init__.py
src/bundle/pyinstaller/semio/backend/manager/: __init__.py  semiomanager.py
src/bundle/pyinstaller/semio/extension/: __init__.py  service.py
src/bundle/pyinstaller/semio/extension/transformer/: __init__.py
src/bundle/pyinstaller/semio/extension/translator/: translator.py
src/bundle/pyinstaller/semio/extensions/grasshopper/: __init__.py  rhino.py  semioextensiongrasshopper.py
src/bundle/pyinstaller/semio/geometry/: __init__.py
src/bundle/pyinstaller/semio/model/: __init__.py
src/bundle/pyinstaller/semio/utils/: __init__.py  behaviour.py  server.py
src/bundle/pyinstallerhooks/: hook-grpc.py
src/bundle/semio/assembler/v1/: assembler_pb2.py  assembler_pb2.pyi  assembler_pb2_grpc.py
src/bundle/semio/backend/assembler/: semioassembler.py
src/bundle/semio/backend/gateway/: semiogateway.py
src/bundle/semio/extension/: extension.py
src/bundle/semio/extension/adapter/: adapter.py
src/bundle/semio/extension/adapter/v1/: adapter_pb2.py  adapter_pb2.pyi  adapter_pb2_grpc.py
src/bundle/semio/extension/converter/: converter.py
src/bundle/semio/extension/converter/v1/: converter_pb2.py  converter_pb2.pyi  converter_pb2_grpc.py
src/bundle/semio/extension/transformer/: transformer.py
src/bundle/semio/extension/transformer/v1/: transformer_pb2.py  transformer_pb2.pyi  transformer_pb2_grpc.py
src/bundle/semio/extension/translator/: __init__.py
src/bundle/semio/extension/translator/v1/: translator_pb2.py  translator_pb2.pyi  translator_pb2_grpc.py
src/bundle/semio/extension/v1/: extension_pb2.py  extension_pb2.pyi
src/bundle/semio/gateway/: __init__.py
src/bundle/semio/gateway/v1/: gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
src/bundle/semio/geometry/v1/: geometry_pb2.py
src/bundle/semio/google/api/: annotations_pb2.py  annotations_pb2.pyi
src/bundle/semio/manager/v1/: manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py
src/bundle/semio/model/v1/: model_pb2.py  model_pb2.pyi
src/bundle/semio/protoc_gen_openapiv2/options/: annotations_pb2.py  annotations_pb2.pyi  openapiv2_pb2.py
src/bundle/semio/utils/: hashing.py  networking.py
src/bundle/yak/: README.txt  build.bat  push.bat  yank.bat
src/extensions/grasshopper/: Dockerfile  extension.py  pyproject.toml
src/extensions/grasshopper/semio/extensions/grasshopper/: __init__.py  extension.py  semio.gh.py  semioextensiongrasshopper.py
src/extensions/grasshopper/semio/grasshopper/: after.3dm  grasshopper.py  rhino.py  semio.gh.py  test.3dm
src/extensions/rhino/: pyproject.toml  semioextension.toml
src/extensions/rhino/semio/rhino/: extension.py  grasshopper.py
src/python/core/: pyproject.toml
src/python/core/semio/extensionservices/: __init__.py
src/python/core/semio/extensionservices/adapter/: __init__.py
src/python/core/semio/extensionservices/converter/: __init__.py
src/python/core/semio/extensionservices/transformer/: __init__.py
src/python/core/semio/model/: __init__.py
src/python/extensions/rhino/: pyproject.toml
src/schema/semio/gateway/v1/: BUILD.bazel  gateway.proto
src/schema/semio/model/v1/: BUILD.bazel  model.proto
src/server/: pyproject.toml  server.py
src/server/semio/backend/: pygateway.py  pyserver.py  server.py  utils.py
src/uis/grasshopper/proxy/: README.md  pyproject.toml
(+2017 files in other folders)
