module(name = "semio", version = "0.1.0")

bazel_dep(name = "protobuf", version = "3.19.0")

bazel_dep(name = "rules_python", version = "0.18.1")
pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "pip",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_11",
    python_version = "3.11",
)
use_repo(python, "python3_11_toolchains")
register_toolchains(
    "@python3_11_toolchains//:all",
)