[tool.poetry]
name = "semio"
version = "2.0.0"
description = "Next gen design tool. Collaborativ, scalable and cross-platform. Promised."
authors = ["Ueli Saluz <usaluz@posteo.de>"]
maintainers = ["Ueli Saluz <usaluz@posteo.de>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/usalu/semio"
homepage = "https://usalu.github.io/semio"

[tool.poetry.dependencies]
python = "~3.12"
sqlalchemy = "^2.0.23"
rdflib = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pyshacl = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
