[tool.poetry]
name = "semio"
version = "2.0.0"
description = "Next gen design tool. Collaborativ, scalable and cross-platform. Promised."
authors = ["Ueli Saluz <usaluz@posteo.de>"]
maintainers = ["Ueli Saluz <usaluz@posteo.de>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/usalu/semio"
homepage = "https://usalu.github.io/semio"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
graphene = "^3.3"
flask = "^3.0.0"
graphql-server = { extras = ["flask"], version = "^3.0.0b7" }
graphene-sqlalchemy = { version = "^3.0.0rc1", allow-prereleases = true }
setuptools = "^69.0.2"                                                    # hidden dependency of graphene-sqlalchemy because of import pkg_resources
marshmallow-sqlalchemy = "^0.29.0"
pydantic = "^1"
graphene-pydantic = "^0.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
semio = "semio:main"
