[tool.poetry]
name = "semio-engine"
version = "4.3.0-beta"
description = "The engine that powers semio."
authors = ["Ueli Saluz <ueli@semio-tech.com>"]
maintainers = ["Ueli Saluz <ueli@semio-tech.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/usalu/semio"
homepage = "https://github.com/usalu/semio"
packages = [{ include = "engine.py" }]

[tool.poetry.dependencies]
fastapi = { extras = ["standard"], version = "^0.115.12" }
graphene = "^3.4.3"
graphene-pydantic = "^0.6.1"
graphene-sqlalchemy = { version = "^3.0.0rc2", allow-prereleases = true }
jinja2 = "^3.1.6"
lark = "^1.2.2"
networkx = "^3.4.1"
numpy = "^2.2.5"
openai = "^1.75.0"
pint = "^0.24.4"
pydantic = "^2.11.3"
pyside6 = "^6.9.0"
python = ">=3.13,<3.14"
python-dotenv = "^1.1.0"
pytransform3d = "^3.14.0"
requests = "^2.32.3"
sqlalchemy = "^2.0.40"
sqlmodel = "^0.0.24"
starlette = "^0.46.2"
starlette-graphene3 = "^0.6.0"
uvicorn = { extras = ["standard"], version = "^0.34.2" }
loguru = "^0.7.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
deepdiff = "^8.4.2"
pytest-cov = "^6.1.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"
pre-commit = "^4.2.0"
black = "^25.1.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# engine = "engine:main" #doesn't work. Use instead: poetry run python engine.py
# dev = "python -m debugpy --listen 5678 --wait-for-client engine.py"
run = "engine:run"
dev = "engine:dev"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "def client__str__",
    "def list_client__str__",

    "raise AssertionError",
    "raise NotImplementedError",
    "raise InvalidDatabase",
    "raise InvalidBackend",

    "if __name__ == .__main__.:",
    "def main():",
    "if app.debug:",

    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = true

    [testenv]
    skip_install = true
    allowlist_externals = poetry
    commands_pre = poetry install
    commands = tests.sh
"""

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
