[tool.poetry]
name = "semio-script"
version = "2.0.0"
description = "Toolset to define scripts in semio."
authors = ["Ueli Saluz <usaluz@posteo.de>"]
maintainers = ["Ueli Saluz <usaluz@posteo.de>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/usalu/semio"
homepage = "https://usalu.github.io/semio"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",

    "raise AssertionError",
    "raise NotImplementedError",

    "if __name__ == .__main__.:",

    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = true

    [testenv]
    skip_install = true
    allowlist_externals = poetry
    commands_pre = poetry install
    commands = tests.sh
"""
