[tool.poetry]
name = "semio-server"
version = "0.1.0"
description = "The backend server for semio."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pytest = "^7.2.0"
mathutils = "^3.3.0"
multipledispatch = "^0.6.0"
pytest-lazy-fixture = "^0.6.3"
dacite = "^1.6.0"
pydantic = "^1.10.4"
semio = {path = "../packages/python", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
