[tool.poetry]
name = "semio-server"
version = "0.1.0"
description = "A backend server for semio."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.4"
networkx = "^2.8.8"
mathutils = "^3.3.0"
semio = {path = "../packages/python", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
