[tool.poetry]
name = "semio-server"
version = "0.0.1"
description = "A backend server for semio."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "*"
networkx = "*"
mathutils = "*"
semio = {path = "C:/Git/Studium/PhD/semio/src/packages/python/dist/semio-0.0.1-py3-none-any.whl"}
#semio = {path = "../packages/python/dist/semio-0.0.1-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
