[tool.poetry]
name = "semio-backend-assembler"
version = "0.0.1"
description = "An assembler for the backend of semio."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
networkx = "^3.0"
numpy = "^1.24.2"
semio = {path = "C:/Git/Studium/PhD/semio/src/packages/python/dist/semio-0.0.1-py3-none-any.whl"}
#semio = {path = "../packages/python/dist/semio-0.0.1-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
