[tool.poetry]
name = "semio.gh"
version = "0.0.1"
description = "A semio extension for Grasshopper through Compute."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.10"
rhino3dm = "7.11.1"
compute-rhino3d = "*"
pydantic = "*"
semio = {path = "C:/Git/Studium/PhD/semio/src/packages/python/dist/semio-0.0.1-py3-none-any.whl"}
#semio = {path = "../../packages/python/dist/semio-0.1.0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
