[tool.poetry]
name = "semio-rhino"
version = "0.1.0"
description = "A semio extension for Rhino including Grasshopper through Compute."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
rhino3dm = "^7.15.0"
compute-rhino3d = "^0.12.2"
pytest = "^7.2.0"
mathutils = "^3.3.0"
multipledispatch = "^0.6.0"
pytest-lazy-fixture = "^0.6.3"
dacite = "^1.6.0"
semio = {path = "../../core", develop = true}
pydantic = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
