load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "gateway",
    srcs = glob(["**/*.py"]),
    main = "semio/backend/gateway/pygateway.py",
    deps = [
        "//src/packages/python:semio",
        requirement("grpcio"),
        requirement("protobuf"),
        requirement("grpcio-reflection"),
    ],
    imports = [".."]
)