[tool.poetry]
name = "semio-backend-gateway"
version = "0.0.1"
description = "A gateway backend for semio."
authors = ["Ueli Saluz <semio@posteo.org>"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "semio" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
networkx = "*"
mathutils = "*"

# # Use this for production
# semio = "*"

# # Use this for latest development version on github
# semio = { git = "https://github.com/usalu/semio.git", subdirectory = "src/packages/python" }

# Use this for local development
semio = {path = "C:/Git/Studium/PhD/semio/src/packages/python/dist/semio-0.0.1-py3-none-any.whl"}

# # This does sadly not work:
# semio = {path = "../packages/python/dist/semio-0.0.1-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
