load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "v1_proto",
    srcs = ["model.proto"],
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "v1_proto_lint",
    config = "//src/schema/semio:buf.yaml",
    targets = [":v1_proto"],
)
