load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

proto_library(
    name = "v1_proto",
    srcs = ["transformer.proto"],
    visibility = ["//visibility:public"],
    deps = ["@buf_deps_src_schema_semio//model/v1:v1_proto"],
)

buf_lint_test(
    name = "v1_proto_lint",
    config = "//src/schema/semio:buf.yaml",
    targets = [":v1_proto"],
)
